<resources>
    <string name="app_name">Post It</string>
    <string name="facebook_app_id">2153292728224242</string>
    <string name="logo_description">Logotype of App</string>
    <string name="password_hint">Password</string>
    <string name="confirmPassword_hint">Confirm Password</string>
    <string name="username_hint">Username or Email</string>
    <string name="cardView_login">Login</string>
    <string name="cardView_signUp">Sign Up</string>
    <string name="login_signUp">Register Here</string>
    <string name="signUp_login">Already a member? Login</string>
    <string name="actions_group">Actions</string>

    <string name="menu_post">Post</string>

    <string name="title_activity_menu">MenuActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="loremIpsum">Nam porta blandit lacus nec malesuada. Morbi sit amet mauris sodales lorem commodo dapibus. Nulla fringilla lectus quis quam dapibus dapibus vel in ex. Nullam nec convallis eros, sed elementum urna. Fusce sollicitudin eleifend enim, in gravida nulla. Duis eget libero nec velit faucibus varius. In pulvinar nulla vel augue mattis, nec dictum lectus gravida.</string>
    <string name="dateAdded">13&#8211;06&#8211;2018 3:40 PM</string>

    <string name="submitButton">Submit</string>
    <string name="cancelButton">Cancel</string>
    <string name="submitDescription">Provide a description</string>
    <string name="submitImage">Image of the submit</string>
    <string name="share">Share</string>
</resources>
