<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_margin="10dp"
    android:layout_height="wrap_content">
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:layout_gravity="center">
        <ImageView
            android:id="@+id/imageViewPost"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:padding="5dp"
            android:contentDescription="@string/app_name"
            app:srcCompat="@drawable/send" />

        <TextView
            android:id="@+id/textViewPostDescription"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/loremIpsum" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:layout_gravity="end">

        <TextView
            android:id="@+id/textViewDateAdded"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textAlignment="textEnd"
            android:text="@string/dateAdded" />
    </LinearLayout>
</LinearLayout>


</android.support.v7.widget.CardView>